Fix top nav bar styling on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -755,13 +755,14 @@ footer ul li{
         font-size: medium;
     }
 
-    .mob-nav {
+    /* .mob-nav {
         width: 75%;
         display: inline;
-    }
+    } */
 
     .navbar-expand-lg {
         padding: inherit;
+        margin: 9px;
     }
 
     .dropdown-item {
